[package]
name = "real_estate"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" , features = ["staking"]}
serde = {version = "1.0.103" , default-features = false , feature = ["derive"]}
cw-storage-plus = "0.13.4"
thiserror = "1"


[dev-dependencies]
cw-multi-test = "0.13.4"